# DjangoProject

./: LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: django_ci.yml
damaso/: asgi.py  settings.py  urls.py  wsgi.py
damaso/base/: apps.py
