[tool.poetry]
name = "django-project"
version = "0.1.0"
description = "Projeto de desenvolvimento utilizando Django e Python"
authors = ["Dâmaso Júnio Pereira Brasileo <junio.pereirab@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
